--- a/Assets/Quiz.css
+++ b/Assets/Quiz.css
@@ -1,4 +1,12 @@
+body{
+    background-image:URL(./187161.jpg);
+    background-size: 1200px;
+    color:white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+    opacity: 75%;
+    
 
+}
 
 #logo {
     width: 25%;
