--- a/Assets/Quiz.css
+++ b/Assets/Quiz.css
@@ -4,11 +4,43 @@ body{
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     opacity: 75%;
-    
-
 }
 
 #logo {
     width: 25%;
     height: 25%;
+}
+
+button {
+    margin:15px;
+    border-color: magenta;
+    border-width: 2px;
+    border-style: double;
+    background-color:pink; 
+}
+
+.play{
+    margin: 20px;
+    padding: 15px; 
+    font-size: 50px;
+    display:inline-block;
+    color: greenyellow;
+}
+
+.jumbotron {
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 20px; 
+    background: rgb(100, 92, 209);
+    color: rgb(0, 0, 0);
+    width: 85%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-width: 10px;
+    border-style: groove;
+    border-color: magenta;
+    text-align: center;
+}
+.lead {
+    font-size: 32px;
 }
